fixing color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
     color: #000000;
 }
 span {
-    color: #981E16;
+    color: #751710;
     font-weight: 700;
 }
 
